--- a/generators/app/templates/package.json
+++ b/generators/app/templates/package.json
@@ -33,8 +33,7 @@
     "gulp-sourcemaps": "^1.5.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
-    "gulp-zip": "^3.2.0",
-    "wiredep": "^2.2.2"
+    "gulp-zip": "^3.2.0"
   },
   "license": "ISC"
 }
